[package]
name = "con"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
flate2 = { version = "1.0.22", features = ["tokio"] }
clap = "3.0.0-beta.4"
nix = "0.22"
oci-spec = "0.5.1"
oci-registry = { git = "https://github.com/petkovicdanilo/oci-registry-rs", rev = "dd7d936" }
tar = "0.4.37"
tokio = { version = "1", features = ["full"] }
