[package]
name = "con"
version = "0.1.0"
authors = [ "Danilo Petkovic <petkovicdanilo97@gmail.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
caps = { git = "https://github.com/lucab/caps-rs", rev = "cb54844" }
clap = "3.0.0-beta.4"
flate2 = { version = "1.0.22", features = ["tokio"] }
nix = "0.22"
oci-registry = { git = "https://github.com/petkovicdanilo/oci-registry-rs", rev = "dd7d936" }
oci-spec = "0.5.1"
tar = "0.4.37"
tokio = { version = "1", features = ["full"] }
