[package]
name = "con"
version = "0.1.0"
authors = [ "Danilo Petkovic <petkovicdanilo97@gmail.com>" ]
description = "con - simple program to run containers in Rust"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
flate2 = { version = "1.0.22", features = ["tokio"] }
futures = "0.3.17"
caps = { git = "https://github.com/lucab/caps-rs", rev = "cb54844" }
cgroups-rs = "0.2"
clap = "3.0.0-beta.4"
indicatif = "0.16.2"
nix = "0.22"
oci-registry = { git = "https://github.com/petkovicdanilo/oci-registry-rs", rev = "c2d24cf", features = ["indicatif"] }
oci-spec = "0.5.1"
tokio = { version = "1", features = ["full"] }
tar = "0.4.37"
